feat: forward & backward untested

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -157,10 +157,10 @@
         "coef = clf.coef_.copy()\n",
         "plt.figure(figsize=(10, 5))\n",
         "scale = np.abs(coef).max()\n",
-        "for i in range(10):\n",
-        "    l1_plot = plt.subplot(2, 5, i + 1)\n",
+        "for k in range(10):\n",
+        "    l1_plot = plt.subplot(2, 5, k + 1)\n",
         "    l1_plot.imshow(\n",
-        "        coef[i].reshape(28, 28),\n",
+        "        coef[k].reshape(28, 28),\n",
         "        interpolation=\"nearest\",\n",
         "        cmap=plt.cm.RdBu,\n",
         "        vmin=-scale,\n",
@@ -168,7 +168,7 @@
         "    )\n",
         "    l1_plot.set_xticks(())\n",
         "    l1_plot.set_yticks(())\n",
-        "    l1_plot.set_xlabel(\"Class %i\" % i)\n",
+        "    l1_plot.set_xlabel(\"Class %i\" % k)\n",
         "plt.suptitle(\"Classification vector for...\")\n",
         "\n",
         "run_time = time.time() - t0\n",
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -257,8 +257,8 @@
         "X_data = X_data[:, 1:]\n",
         "y_data_temp = y_csv.to_numpy()\n",
         "y_data = np.zeros(len(y_data_temp))\n",
-        "for i in range(len(y_data_temp)):\n",
-        "    y_data[i] = y_data_temp[i][1]\n",
+        "for k in range(len(y_data_temp)):\n",
+        "    y_data[k] = y_data_temp[k][1]\n",
         "\n",
         "print(X_data.shape)\n",
         "print(y_data.shape)\n",
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -299,8 +299,8 @@
       ],
       "source": [
         "\n",
-        "a = FFNN()\n",
-        "print(a.x)"
+        "a_k = FFNN()\n",
+        "print(a_k.x)"
       ]
     },
     {
@@ -312,13 +312,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "[[8.63626536e-11 4.65251038e-14 9.99994388e-01 1.37041916e-07\n",
+            "  1.63340714e-11 1.41068751e-14 3.11054455e-09 5.47132261e-06\n",
+            "  2.55097799e-13 1.30029272e-13]]\n",
+            "0.9311\n",
             "(70000, 784)\n",
             "(70000,)\n"
           ]
@@ -341,8 +345,8 @@
         "# X, y = make_classification(n_samples=100, random_state=1)\n",
         "# X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, random_state=1)\n",
         "clf = MLPClassifier(random_state=1, max_iter=300).fit(X_train, y_train)\n",
-        "# clf.predict_proba(X_test[:1])\n",
-        "# clf.score(X_test, y_test)\n",
+        "clf.predict_proba(X_test[:1])\n",
+        "print(clf.score(X_test, y_test))\n",
         "# X_MLP = X_test[0:5]\n",
         "# y_MLP = clf.predict(X_MLP)\n",
         "# visualize(X_MLP, y_MLP, 1, 3)\n",
@@ -366,17 +370,251 @@
           "output_type": "stream",
           "text": [
             "11525\n",
-            "16.464285714285715%\n"
+            "83.53571428571429%\n"
           ]
         }
       ],
       "source": [
         "differences = 0\n",
-        "for i in range(len(y_data)):\n",
-        "    if int(y_data[i]) != int(y_MLP[i]):\n",
+        "for k in range(len(y_data)):\n",
+        "    if int(y_data[k]) != int(y_MLP[k]):\n",
         "        differences += 1\n",
         "print(differences)\n",
+        "\n",
         "print(str((1-differences/len(y_data)) * 100) + \"%\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from typing import Literal, Callable, Union\n",
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "class FFNNClassifier:\n",
+        "    def __init__(self, \n",
+        "            hidden_layer_sizes: np.typing.ArrayLike,\n",
+        "            activation_func: Literal['linear', 'relu', 'sigmoid', 'tanh', 'softmax'], \n",
+        "            learning_rate: float,\n",
+        "            verbose: int,\n",
+        "            epoch_amount: int,\n",
+        "            batch_size: int,\n",
+        "            loss_func: Literal['mean_squared_error', 'binary_cross_entropy', 'categorical_cross_entropy']\n",
+        "        ):\n",
+        "        self.hidden_layer_sizes = hidden_layer_sizes\n",
+        "        self.X: np.typing.ArrayLike = [[]]\n",
+        "        self.y: np.typing.ArrayLike = []\n",
+        "        self.weights_history = [[[]]] # array of weight matrix. index is current epoch\n",
+        "        self.biases_history = [[]] # array of bias list. index is current epoch\n",
+        "\n",
+        "        self.activation_func = activation_func\n",
+        "        self.learning_rate = learning_rate\n",
+        "        # self.max_iter = max_iter\n",
+        "        self.verbose = verbose\n",
+        "        self.epoch_amount = epoch_amount\n",
+        "        self.batch_size = batch_size\n",
+        "        self.loss_func = loss_func\n",
+        "\n",
+        "\n",
+        "    def _init_weights(self):\n",
+        "        pass\n",
+        "\n",
+        "    def _init_biases(self):\n",
+        "        pass\n",
+        "\n",
+        "# region functions\n",
+        "    def _activation_function(self, x: Union[float, np.typing.ArrayLike], func: str):\n",
+        "        if func == 'linear': return x\n",
+        "        elif func == 'relu': return np.maximum(0, x)\n",
+        "        elif func == 'sigmoid': return 1.0/(1.0 + np.exp(-x))\n",
+        "        elif func == 'tanh': return np.tanh(x)\n",
+        "        elif func == 'softmax':\n",
+        "            exp_x = np.exp(x - np.max(x, axis=1, keepdims=True)) \n",
+        "            return exp_x / np.sum(exp_x, axis=1, keepdims=True) # keepdims=True will keep the dimension of the original array\n",
+        "        raise \"Activation function not supported!\"\n",
+        "    \n",
+        "    def _activation_derived_function(self, x: Union[float, np.typing.ArrayLike], func: str):\n",
+        "        if func == 'linear': return np.ones_like(x)\n",
+        "        elif func == 'relu': return np.where(x > 0, 1, 0)\n",
+        "        elif func == 'sigmoid':\n",
+        "            sig = self._activation_function(x, 'sigmoid')\n",
+        "            return sig * (1 - sig)\n",
+        "        elif func == 'tanh': \n",
+        "            p = 2.0/(np.exp(x) - np.exp(-x))\n",
+        "            return p*p\n",
+        "        elif func == 'softmax': # TODO: Check if this implementation is correct\n",
+        "            delta = np.zeros_like(x) \n",
+        "            for i in range(x.shape[0]): delta[i, i] = 1\n",
+        "            softmax = self._activation_function(x, 'softmax')\n",
+        "            return softmax*(delta-softmax) \n",
+        "        raise \"Activation function not supported!\"\n",
+        "    \n",
+        "\n",
+        "    def _loss_function(self, y_act, y_pred, number_of_classes, func: str):\n",
+        "        if func == 'mean_squared_error': return self.mean_squared_error(y_act, y_pred)\n",
+        "        elif func == 'binary_cross_entropy': return self.binary_cross_entropy(y_act, y_pred)\n",
+        "        elif func == 'categorical_cross_entropy': return self.categorical_cross_entropy(y_act, y_pred, number_of_classes)\n",
+        "    def mean_squared_error(y_act, y_pred):\n",
+        "        res = 0\n",
+        "        n = len(y_act)\n",
+        "        for i in range(n):\n",
+        "            minus = y_act - y_pred\n",
+        "            res += minus*minus\n",
+        "        return res/n\n",
+        "    def binary_cross_entropy(y_act, y_pred, n):\n",
+        "        res = 0\n",
+        "        n = len(y_act)\n",
+        "        for i in range(n):\n",
+        "            res += y_act*np.log(y_pred) + (1-y_act)*np.log(1-y_pred)\n",
+        "        return -res/n\n",
+        "    def categorical_cross_entropy(y_act, y_pred, c):\n",
+        "        res = 0\n",
+        "        n = len(y_act)\n",
+        "        for i in range(n):\n",
+        "            for j in range(c):\n",
+        "                res += y_act[i][j]*np.log(y_pred[i][j])\n",
+        "        return -res/n\n",
+        "\n",
+        "# endregion functions\n",
+        "\n",
+        "\n",
+        "# region getters setters\n",
+        "    def _get_current_weight_in_layer(self, layer: int):\n",
+        "        return self.weights_history[len(self.weights_history)-1][layer]\n",
+        "\n",
+        "    def _get_current_bias_in_layer(self, layer: int):\n",
+        "        return self.biases_history[len(self.biases_history)-1][layer]\n",
+        "\n",
+        "    def _update_current_weights(self, new_weights):\n",
+        "        self.weights_history[len(self.biases_history)-1] = new_weights\n",
+        "\n",
+        "    def _update_current_biases(self, new_biases):\n",
+        "        self.biases_history[len(self.biases_history)-1] = new_biases\n",
+        "    \n",
+        "    # Can only be called after setting X and y\n",
+        "    def _get_hidden_layer_sizes(self):\n",
+        "        if len(self.X) == 0:\n",
+        "            raise \"len(self.X) == 0\"\n",
+        "        if len(self.X[0]) == 0:\n",
+        "            raise \"len(self.X[0]) == 0\"\n",
+        "        if len(self.y) == 0:\n",
+        "            raise \"len(self.y) == 0\"\n",
+        "        \n",
+        "        len_x = len(self.X[0])\n",
+        "        len_y = len(self.y)\n",
+        "        layer_sizes = [len_x]\n",
+        "        for i in range(len(self.hidden_layer_sizes)):\n",
+        "            layer_sizes.append(self.hidden_layer_sizes[i])\n",
+        "        layer_sizes.append(len_y)\n",
+        "        \n",
+        "        return layer_sizes\n",
+        "\n",
+        "    # Can only be called after setting X and y\n",
+        "    def _get_number_of_classes(self):\n",
+        "        return len(np.unique(self.y))\n",
+        "    \n",
+        "# endregion getters setters\n",
+        "\n",
+        "    def fit(self, X: np.typing.ArrayLike, y: np.typing.ArrayLike):\n",
+        "        self.X = X\n",
+        "        self.y = y\n",
+        "        \n",
+        "        self._init_weights()\n",
+        "        self._init_biases()\n",
+        "        layer_sizes = self._get_hidden_layer_sizes()\n",
+        "        network_depth = len(layer_sizes)\n",
+        "        number_of_classes = self._get_number_of_classes()\n",
+        "\n",
+        "        for current_dataset_idx in range(len(self.X)):\n",
+        "            # Feed Forward\n",
+        "            a = np.zeros((network_depth, len(self.X[current_dataset_idx])))\n",
+        "            h = np.zeros((network_depth, len(self.X[current_dataset_idx])))\n",
+        "            h[0] = self.X[current_dataset_idx]\n",
+        "            for k in range(1, len(network_depth)):\n",
+        "                b_k = self._get_current_bias_in_layer(k)\n",
+        "                w_k = self._get_current_weight_in_layer(k)\n",
+        "                h_k_min_1 = h[k-1]\n",
+        "\n",
+        "                a_k = b_k + np.dot(w_k, h_k_min_1)\n",
+        "                a[k] = a_k\n",
+        "                h[k] = self._activation_function(a_k, self.activation_func)\n",
+        "            \n",
+        "            loss_grad = self._loss_function(\n",
+        "                y_act=self.y[current_dataset_idx], \n",
+        "                y_pred=h[network_depth-1], \n",
+        "                number_of_classes=number_of_classes, \n",
+        "                func=self.loss_func\n",
+        "            )\n",
+        "\n",
+        "            # Backward Propagation\n",
+        "            delta = loss_grad * self._activation_derived_function(a[-1], self.activation_func)\n",
+        "            weight_grads = [np.dot(h[-2].T, delta)]\n",
+        "            bias_grads = [np.sum(delta, axis=0, keepdims=True)]\n",
+        "\n",
+        "            for k in range(len(self.hidden_layer_sizes), 0, -1):\n",
+        "                weights = self._get_current_weight_in_layer(k)\n",
+        "                delta = np.dot(delta, weights.T) * self._activation_derived_function(a[k-1], self.activation_func)\n",
+        "                weight_grads.insert(0, np.dot(h[k-1].T, delta))\n",
+        "                bias_grads.insert(0, np.sum(delta, axis=0, keepdims=True))\n",
+        "            \n",
+        "            new_weights = []\n",
+        "            new_biases = []\n",
+        "            for k in range(len(self.weights_history)):\n",
+        "                w_k = self._get_current_weight_in_layer(k)\n",
+        "                new_weights.append(w_k - self.learning_rate * weight_grads[k])\n",
+        "                new_biases.append(w_k - self.learning_rate * bias_grads[k])\n",
+        "            self.weights_history.append(new_weights)\n",
+        "            self.biases_history.append(new_biases)\n",
+        "        \n",
+        "\n",
+        "\n",
+        "    def predict(self, X_test: np.ArrayLike):\n",
+        "        prediction = np.zeros(len(X_test))\n",
+        "        for i in range(len(X_test)):\n",
+        "            X = X_test[i]\n",
+        "            len_weight = len(self._get_current_weight_in_layer(0))\n",
+        "            for k in range(len_weight):\n",
+        "                b_k = self._get_current_bias_in_layer(k)\n",
+        "                w_k = self._get_current_weight_in_layer(k)\n",
+        "\n",
+        "                a_k = b_k + np.dot(w_k, X)\n",
+        "                X = self._activation_function(a_k, self.activation_func)\n",
+        "            \n",
+        "            predicted_class = np.argmax(X) # idx with highest value. idx is also the class\n",
+        "            prediction[i] = predicted_class\n",
+        "            \n",
+        "        return prediction\n",
+        "\n",
+        "    \n",
+        "    def predict_proba(X_test: np.ArrayLike):\n",
+        "        pass\n",
+        "\n",
+        "    def score(X_test, y_test):\n",
+        "        pass\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ffnnn = FFNNClassifier(\n",
+        "    hidden_layer_sizes=(64, 64),\n",
+        "    activation_func=\"relu\",\n",
+        "    learning_rate=0.1,\n",
+        "    max_iter=20,\n",
+        "    verbose=0,\n",
+        "    epoch_amount=5,\n",
+        "    batch_size=10\n",
+        ")\n",
+        "ffnnn.fit(X_train, y_train)\n",
+        "prediction = ffnnn.predict(X_test)\n",
+        "visualize(X_test, prediction, 10, 10)\n"
       ]
     }
   ],
