refactor: direct access to array instead of so much getter function wrapper

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -388,7 +388,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "module 'numpy' has no attribute 'ArrayLike'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal, Callable, Union\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mFFNNClassifier\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m            \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtyping\u001b[49m\u001b[43m.\u001b[49m\u001b[43mArrayLike\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m            \u001b[49m\u001b[43mactivation_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mlinear\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msigmoid\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtanh\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msoftmax\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m   (...)\u001b[39m\u001b[32m     13\u001b[39m \u001b[43m            \u001b[49m\u001b[43mloss_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmean_squared_error\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbinary_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcategorical_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 192\u001b[39m, in \u001b[36mFFNNClassifier\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    187\u001b[39m         \u001b[38;5;28mself\u001b[39m.weights_history.append(new_weights)\n\u001b[32m    188\u001b[39m         \u001b[38;5;28mself\u001b[39m.biases_history.append(new_biases)\n\u001b[32m--> \u001b[39m\u001b[32m192\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X_test: \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mArrayLike\u001b[49m):\n\u001b[32m    193\u001b[39m     prediction = np.zeros(\u001b[38;5;28mlen\u001b[39m(X_test))\n\u001b[32m    194\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(X_test)):\n",
+            "\u001b[36mFile \u001b[39m\u001b[32md:\\ITB\\Semester 6\\ML\\Tubes 1\\venv\\Lib\\site-packages\\numpy\\__init__.py:427\u001b[39m, in \u001b[36m__getattr__\u001b[39m\u001b[34m(attr)\u001b[39m\n\u001b[32m    424\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mchar\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mchar\u001b[39;00m\n\u001b[32m    425\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m char.chararray\n\u001b[32m--> \u001b[39m\u001b[32m427\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m has no attribute \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    428\u001b[39m                      \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m\"\u001b[39m.format(\u001b[34m__name__\u001b[39m, attr))\n",
+            "\u001b[31mAttributeError\u001b[39m: module 'numpy' has no attribute 'ArrayLike'"
+          ]
+        }
+      ],
       "source": [
         "from typing import Literal, Callable, Union\n",
         "import numpy as np\n",
@@ -399,7 +413,7 @@
         "            hidden_layer_sizes: np.typing.ArrayLike,\n",
         "            activation_func: Literal['linear', 'relu', 'sigmoid', 'tanh', 'softmax'], \n",
         "            learning_rate: float,\n",
-        "            verbose: int,\n",
+        "            verbose: int, # 0: no print, 1: print epoch progress\n",
         "            epoch_amount: int,\n",
         "            batch_size: int,\n",
         "            loss_func: Literal['mean_squared_error', 'binary_cross_entropy', 'categorical_cross_entropy']\n",
@@ -412,17 +426,17 @@
         "\n",
         "        self.activation_func = activation_func\n",
         "        self.learning_rate = learning_rate\n",
-        "        # self.max_iter = max_iter\n",
         "        self.verbose = verbose\n",
         "        self.epoch_amount = epoch_amount\n",
         "        self.batch_size = batch_size\n",
         "        self.loss_func = loss_func\n",
         "\n",
-        "\n",
-        "    def _init_weights(self):\n",
+        "    # return [ matrix, matrix, matrix ... ] where matrix is the weight adjacency matrix for each layer. length should be number of layers - 1 because its like the edges/connection between the nodes\n",
+        "    def _generate_initial_weights(self):\n",
         "        pass\n",
-        "\n",
-        "    def _init_biases(self):\n",
+        "    \n",
+        "    # return [ float, float, float ... ] where float is the bias for each layer. length should be number of layers - 1 because input layer does not have bias\n",
+        "    def _generate_initial_biases(self):\n",
         "        pass\n",
         "\n",
         "# region functions\n",
@@ -482,20 +496,9 @@
         "\n",
         "\n",
         "# region getters setters\n",
-        "    def _get_current_weight_in_layer(self, layer: int):\n",
-        "        return self.weights_history[len(self.weights_history)-1][layer]\n",
-        "\n",
-        "    def _get_current_bias_in_layer(self, layer: int):\n",
-        "        return self.biases_history[len(self.biases_history)-1][layer]\n",
-        "\n",
-        "    def _update_current_weights(self, new_weights):\n",
-        "        self.weights_history[len(self.biases_history)-1] = new_weights\n",
-        "\n",
-        "    def _update_current_biases(self, new_biases):\n",
-        "        self.biases_history[len(self.biases_history)-1] = new_biases\n",
         "    \n",
         "    # Can only be called after setting X and y\n",
-        "    def _get_hidden_layer_sizes(self):\n",
+        "    def _get_hidden_layer_sizes(self) -> np.typing.NDArray:\n",
         "        if len(self.X) == 0:\n",
         "            raise \"len(self.X) == 0\"\n",
         "        if len(self.X[0]) == 0:\n",
@@ -503,14 +506,40 @@
         "        if len(self.y) == 0:\n",
         "            raise \"len(self.y) == 0\"\n",
         "        \n",
-        "        len_x = len(self.X[0])\n",
-        "        len_y = len(self.y)\n",
-        "        layer_sizes = [len_x]\n",
-        "        for i in range(len(self.hidden_layer_sizes)):\n",
-        "            layer_sizes.append(self.hidden_layer_sizes[i])\n",
-        "        layer_sizes.append(len_y)\n",
+        "        len_features = len(self.X[0])\n",
+        "        len_classes = self._get_number_of_classes()\n",
+        "        layer_sizes = np.zeros(len(self.hidden_layer_sizes)+2)\n",
+        "        layer_sizes[0] = len_features\n",
+        "        for i in range(1, len(self.hidden_layer_sizes)):\n",
+        "            layer_sizes[i] = self.hidden_layer_sizes[i-1]\n",
+        "        layer_sizes[len(layer_sizes)-1] = len_classes\n",
         "        \n",
         "        return layer_sizes\n",
+        "    \n",
+        "    # Can only be called after setting X and y\n",
+        "    def _generate_new_empty_layers(self):\n",
+        "        if len(self.X) == 0:\n",
+        "            raise \"len(self.X) == 0\"\n",
+        "        if len(self.X[0]) == 0:\n",
+        "            raise \"len(self.X[0]) == 0\"\n",
+        "        if len(self.y) == 0:\n",
+        "            raise \"len(self.y) == 0\"\n",
+        "        \n",
+        "        layer_sizes = self._get_hidden_layer_sizes()\n",
+        "        network_depth = len(layer_sizes)\n",
+        "        weights = []\n",
+        "        biases = []\n",
+        "        nodes = []\n",
+        "        nodes_active = []\n",
+        "        for i in range(network_depth-2):\n",
+        "            weights.append(np.zeros(layer_sizes[i], layer_sizes[i+1]))\n",
+        "            biases.append(np.zeros(layer_sizes[i+1]))\n",
+        "        for i in range(network_depth-1):\n",
+        "            nodes.append(np.zeros(layer_sizes[i]))\n",
+        "            nodes_active.append(np.zeros(layer_sizes[i]))\n",
+        "            \n",
+        "        return weights, nodes, nodes_active, biases\n",
+        "\n",
         "\n",
         "    # Can only be called after setting X and y\n",
         "    def _get_number_of_classes(self):\n",
@@ -522,63 +551,70 @@
         "        self.X = X\n",
         "        self.y = y\n",
         "        \n",
-        "        self._init_weights()\n",
-        "        self._init_biases()\n",
+        "        initial_weight = self._generate_initial_weights()\n",
+        "        initial_bias = self._generate_initial_biases()\n",
+        "        self.weights_history.append(initial_weight)\n",
+        "        self.biases_history.append(initial_bias)\n",
+        "\n",
         "        layer_sizes = self._get_hidden_layer_sizes()\n",
         "        network_depth = len(layer_sizes)\n",
         "        number_of_classes = self._get_number_of_classes()\n",
         "\n",
-        "        for current_dataset_idx in range(len(self.X)):\n",
-        "            # Feed Forward\n",
-        "            a = np.zeros((network_depth, len(self.X[current_dataset_idx])))\n",
-        "            h = np.zeros((network_depth, len(self.X[current_dataset_idx])))\n",
-        "            h[0] = self.X[current_dataset_idx]\n",
-        "            for k in range(1, len(network_depth)):\n",
-        "                b_k = self._get_current_bias_in_layer(k)\n",
-        "                w_k = self._get_current_weight_in_layer(k)\n",
-        "                h_k_min_1 = h[k-1]\n",
+        "        for epoch in range(self.epoch_amount):\n",
+        "            for current_dataset_idx in range(len(self.X)):\n",
+        "                weights, nodes, nodes_active, biases = self._generate_new_empty_layers() # will be filled with weights based on the previous epoch. Will be appended to the history after the end of the epoch\n",
         "\n",
-        "                a_k = b_k + np.dot(w_k, h_k_min_1)\n",
-        "                a[k] = a_k\n",
-        "                h[k] = self._activation_function(a_k, self.activation_func)\n",
-        "            \n",
-        "            loss_grad = self._loss_function(\n",
-        "                y_act=self.y[current_dataset_idx], \n",
-        "                y_pred=h[network_depth-1], \n",
-        "                number_of_classes=number_of_classes, \n",
-        "                func=self.loss_func\n",
-        "            )\n",
+        "                # Feed Forward\n",
+        "                nodes[0] = self.X[current_dataset_idx]\n",
+        "                nodes_active[0] = self.X[current_dataset_idx] # not passed to activation function for the first layer\n",
+        "                for k in range(1, len(network_depth)):\n",
+        "                    w_k = self.weights_history[-1][k] # [-1]: current weight, [k]: current layer\n",
+        "                    b_k = self.biases_history[-1][k]\n",
+        "                    h_k_min_1 = nodes_active[k-1]\n",
         "\n",
-        "            # Backward Propagation\n",
-        "            delta = loss_grad * self._activation_derived_function(a[-1], self.activation_func)\n",
-        "            weight_grads = [np.dot(h[-2].T, delta)]\n",
-        "            bias_grads = [np.sum(delta, axis=0, keepdims=True)]\n",
+        "                    a_k = b_k + np.dot(w_k, h_k_min_1)\n",
+        "                    nodes[k] = a_k\n",
+        "                    nodes_active[k] = self._activation_function(a_k, self.activation_func)\n",
         "\n",
-        "            for k in range(len(self.hidden_layer_sizes), 0, -1):\n",
-        "                weights = self._get_current_weight_in_layer(k)\n",
-        "                delta = np.dot(delta, weights.T) * self._activation_derived_function(a[k-1], self.activation_func)\n",
-        "                weight_grads.insert(0, np.dot(h[k-1].T, delta))\n",
-        "                bias_grads.insert(0, np.sum(delta, axis=0, keepdims=True))\n",
-        "            \n",
-        "            new_weights = []\n",
-        "            new_biases = []\n",
-        "            for k in range(len(self.weights_history)):\n",
-        "                w_k = self._get_current_weight_in_layer(k)\n",
-        "                new_weights.append(w_k - self.learning_rate * weight_grads[k])\n",
-        "                new_biases.append(w_k - self.learning_rate * bias_grads[k])\n",
-        "            self.weights_history.append(new_weights)\n",
-        "            self.biases_history.append(new_biases)\n",
-        "        \n",
+        "                loss_grad = self._loss_function(\n",
+        "                    y_act=self.y[current_dataset_idx], \n",
+        "                    y_pred=nodes_active[network_depth-1], \n",
+        "                    number_of_classes=number_of_classes, \n",
+        "                    func=self.loss_func\n",
+        "                )\n",
+        "\n",
+        "                # Backward Propagation\n",
+        "                delta = loss_grad * self._activation_derived_function(nodes[-1], self.activation_func)\n",
+        "                weight_gradiens = np.zeros_like(self.weights_history[-1])\n",
+        "                bias_gradiens = np.zeros_like(self.biases_history[-1])\n",
+        "                \n",
+        "                for k in range(network_depth-1, 0, -1): # from the last hidden layer (not including the output layer)\n",
+        "                    weights = self.weights_history[-1][k]\n",
+        "                    delta = np.dot(delta, weights.T) * self._activation_derived_function(nodes[k-1], self.activation_func)\n",
+        "                    weight_gradiens[k] = np.dot(nodes_active[k-1].T, delta)\n",
+        "                    bias_gradiens[k] = np.sum(delta, axis=0, keepdims=True)\n",
+        "                \n",
+        "                # Update\n",
+        "                for k in range(len(self.weights_history)):\n",
+        "                    w_k = self.weights_history[-1][k]\n",
+        "                    weights[k] = w_k - self.learning_rate * weight_gradiens[k]\n",
+        "                    biases[k] = w_k - self.learning_rate * bias_gradiens[k]\n",
+        "                self.weights_history.append(weights)\n",
+        "                self.biases_history.append(biases)\n",
+        "\n",
+        "            if self.verbose == 1:\n",
+        "                print(f\"Epoch {epoch+1}/{self.epoch_amount} done\")\n",
+        "\n",
         "\n",
         "\n",
         "    def predict(self, X_test: np.ArrayLike):\n",
         "        prediction = np.zeros(len(X_test))\n",
         "        for i in range(len(X_test)):\n",
         "            X = X_test[i]\n",
-        "            len_weight = len(self._get_current_weight_in_layer(0))\n",
-        "            for k in range(len_weight):\n",
-        "                b_k = self._get_current_bias_in_layer(k)\n",
-        "                w_k = self._get_current_weight_in_layer(k)\n",
+        "            len_layer = len(self.weights_history[-1])\n",
+        "            for k in range(len_layer):\n",
+        "                w_k = self.weights_history[-1][k]\n",
+        "                b_k = self.biases_history[-1][k]\n",
         "\n",
         "                a_k = b_k + np.dot(w_k, X)\n",
         "                X = self._activation_function(a_k, self.activation_func)\n",
