--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -391,26 +391,27 @@
       "outputs": [
         {
           "ename": "AttributeError",
-          "evalue": "module 'numpy' has no attribute 'ArrayLike'",
+          "evalue": "module 'numpy' has no attribute 'NDArray'",
           "output_type": "error",
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal, Callable, Union\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mFFNNClassifier\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m            \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtyping\u001b[49m\u001b[43m.\u001b[49m\u001b[43mArrayLike\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m            \u001b[49m\u001b[43mactivation_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mlinear\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msigmoid\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtanh\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msoftmax\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m   (...)\u001b[39m\u001b[32m     13\u001b[39m \u001b[43m            \u001b[49m\u001b[43mloss_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmean_squared_error\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbinary_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcategorical_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\n",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 192\u001b[39m, in \u001b[36mFFNNClassifier\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    187\u001b[39m         \u001b[38;5;28mself\u001b[39m.weights_history.append(new_weights)\n\u001b[32m    188\u001b[39m         \u001b[38;5;28mself\u001b[39m.biases_history.append(new_biases)\n\u001b[32m--> \u001b[39m\u001b[32m192\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X_test: \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mArrayLike\u001b[49m):\n\u001b[32m    193\u001b[39m     prediction = np.zeros(\u001b[38;5;28mlen\u001b[39m(X_test))\n\u001b[32m    194\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(X_test)):\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal, Callable, Union\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mFFNNClassifier\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m            \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtyping\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNDArray\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m            \u001b[49m\u001b[43mactivation_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mlinear\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msigmoid\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtanh\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msoftmax\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m   (...)\u001b[39m\u001b[32m     13\u001b[39m \u001b[43m            \u001b[49m\u001b[43mloss_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmean_squared_error\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbinary_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcategorical_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 208\u001b[39m, in \u001b[36mFFNNClassifier\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    204\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mweights: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.weights_history[-\u001b[32m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    205\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mbiases: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.biases_history[-\u001b[32m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m208\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X_test: \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNDArray\u001b[49m):\n\u001b[32m    209\u001b[39m     prediction = np.zeros(\u001b[38;5;28mlen\u001b[39m(X_test))\n\u001b[32m    210\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(X_test)):\n",
             "\u001b[36mFile \u001b[39m\u001b[32md:\\ITB\\Semester 6\\ML\\Tubes 1\\venv\\Lib\\site-packages\\numpy\\__init__.py:427\u001b[39m, in \u001b[36m__getattr__\u001b[39m\u001b[34m(attr)\u001b[39m\n\u001b[32m    424\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mchar\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mchar\u001b[39;00m\n\u001b[32m    425\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m char.chararray\n\u001b[32m--> \u001b[39m\u001b[32m427\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m has no attribute \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    428\u001b[39m                      \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m\"\u001b[39m.format(\u001b[34m__name__\u001b[39m, attr))\n",
-            "\u001b[31mAttributeError\u001b[39m: module 'numpy' has no attribute 'ArrayLike'"
+            "\u001b[31mAttributeError\u001b[39m: module 'numpy' has no attribute 'NDArray'"
           ]
         }
       ],
       "source": [
         "from typing import Literal, Callable, Union\n",
         "import numpy as np\n",
+        "from numpy.typing import NDArray\n",
         "\n",
         "\n",
         "class FFNNClassifier:\n",
         "    def __init__(self, \n",
-        "            hidden_layer_sizes: np.typing.ArrayLike,\n",
+        "            hidden_layer_sizes: NDArray,\n",
         "            activation_func: Literal['linear', 'relu', 'sigmoid', 'tanh', 'softmax'], \n",
         "            learning_rate: float,\n",
         "            verbose: int, # 0: no print, 1: print epoch progress\n",
@@ -419,8 +420,8 @@
         "            loss_func: Literal['mean_squared_error', 'binary_cross_entropy', 'categorical_cross_entropy']\n",
         "        ):\n",
         "        self.hidden_layer_sizes = hidden_layer_sizes\n",
-        "        self.X: np.typing.ArrayLike = [[]]\n",
-        "        self.y: np.typing.ArrayLike = []\n",
+        "        self.X: NDArray = [[]]\n",
+        "        self.y: NDArray = []\n",
         "        self.weights_history = [[[]]] # array of weight matrix. index is current epoch\n",
         "        self.biases_history = [[]] # array of bias list. index is current epoch\n",
         "\n",
@@ -440,7 +441,7 @@
         "        pass\n",
         "\n",
         "# region functions\n",
-        "    def _activation_function(self, x: Union[float, np.typing.ArrayLike], func: str):\n",
+        "    def _activation_function(self, x: Union[float, NDArray], func: str):\n",
         "        if func == 'linear': return x\n",
         "        elif func == 'relu': return np.maximum(0, x)\n",
         "        elif func == 'sigmoid': return 1.0/(1.0 + np.exp(-x))\n",
@@ -450,7 +451,7 @@
         "            return exp_x / np.sum(exp_x, axis=1, keepdims=True) # keepdims=True will keep the dimension of the original array\n",
         "        raise \"Activation function not supported!\"\n",
         "    \n",
-        "    def _activation_derived_function(self, x: Union[float, np.typing.ArrayLike], func: str):\n",
+        "    def _activation_derived_function(self, x: Union[float, NDArray], func: str):\n",
         "        if func == 'linear': return np.ones_like(x)\n",
         "        elif func == 'relu': return np.where(x > 0, 1, 0)\n",
         "        elif func == 'sigmoid':\n",
@@ -547,7 +548,7 @@
         "    \n",
         "# endregion getters setters\n",
         "\n",
-        "    def fit(self, X: np.typing.ArrayLike, y: np.typing.ArrayLike):\n",
+        "    def fit(self, X: NDArray, y: NDArray):\n",
         "        self.X = X\n",
         "        self.y = y\n",
         "        \n",
@@ -604,10 +605,14 @@
         "\n",
         "            if self.verbose == 1:\n",
         "                print(f\"Epoch {epoch+1}/{self.epoch_amount} done\")\n",
+        "            elif self.verbose == 2:\n",
+        "                print(f\"========================================\")\n",
+        "                print(f\"Epoch {epoch+1}/{self.epoch_amount} done\")\n",
+        "                print(f\"weights: {self.weights_history[-1]}\")\n",
+        "                print(f\"biases: {self.biases_history[-1]}\")\n",
         "\n",
         "\n",
-        "\n",
-        "    def predict(self, X_test: np.ArrayLike):\n",
+        "    def predict(self, X_test: NDArray):\n",
         "        prediction = np.zeros(len(X_test))\n",
         "        for i in range(len(X_test)):\n",
         "            X = X_test[i]\n",
@@ -625,7 +630,7 @@
         "        return prediction\n",
         "\n",
         "    \n",
-        "    def predict_proba(X_test: np.ArrayLike):\n",
+        "    def predict_proba(X_test: NDArray):\n",
         "        pass\n",
         "\n",
         "    def score(X_test, y_test):\n",
