--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -386,27 +386,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 331,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "module 'numpy' has no attribute 'NDArray'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal, Callable, Union\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;43;01mclass\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43;01mFFNNClassifier\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[38;5;250;43m \u001b[39;49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m            \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtyping\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNDArray\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m            \u001b[49m\u001b[43mactivation_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mlinear\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrelu\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msigmoid\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtanh\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msoftmax\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m   (...)\u001b[39m\u001b[32m     13\u001b[39m \u001b[43m            \u001b[49m\u001b[43mloss_func\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mLiteral\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmean_squared_error\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbinary_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcategorical_cross_entropy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_layer_sizes\u001b[49m\n",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 208\u001b[39m, in \u001b[36mFFNNClassifier\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    204\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mweights: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.weights_history[-\u001b[32m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    205\u001b[39m             \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mbiases: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.biases_history[-\u001b[32m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m208\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X_test: \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNDArray\u001b[49m):\n\u001b[32m    209\u001b[39m     prediction = np.zeros(\u001b[38;5;28mlen\u001b[39m(X_test))\n\u001b[32m    210\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(X_test)):\n",
-            "\u001b[36mFile \u001b[39m\u001b[32md:\\ITB\\Semester 6\\ML\\Tubes 1\\venv\\Lib\\site-packages\\numpy\\__init__.py:427\u001b[39m, in \u001b[36m__getattr__\u001b[39m\u001b[34m(attr)\u001b[39m\n\u001b[32m    424\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mchar\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mchar\u001b[39;00m\n\u001b[32m    425\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m char.chararray\n\u001b[32m--> \u001b[39m\u001b[32m427\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m has no attribute \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    428\u001b[39m                      \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m\"\u001b[39m.format(\u001b[34m__name__\u001b[39m, attr))\n",
-            "\u001b[31mAttributeError\u001b[39m: module 'numpy' has no attribute 'NDArray'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from typing import Literal, Callable, Union\n",
         "import numpy as np\n",
-        "from numpy.typing import NDArray\n",
+        "from numpy.typing import NDArray, ArrayLike\n",
         "\n",
         "\n",
         "class FFNNClassifier:\n",
@@ -415,30 +401,39 @@
         "            activation_func: Literal['linear', 'relu', 'sigmoid', 'tanh', 'softmax'], \n",
         "            learning_rate: float,\n",
         "            verbose: int, # 0: no print, 1: print epoch progress\n",
-        "            epoch_amount: int,\n",
+        "            max_epoch: int,\n",
         "            batch_size: int,\n",
         "            loss_func: Literal['mean_squared_error', 'binary_cross_entropy', 'categorical_cross_entropy']\n",
         "        ):\n",
         "        self.hidden_layer_sizes = hidden_layer_sizes\n",
-        "        self.X: NDArray = [[]]\n",
-        "        self.y: NDArray = []\n",
-        "        self.weights_history = [[[]]] # array of weight matrix. index is current epoch\n",
-        "        self.biases_history = [[]] # array of bias list. index is current epoch\n",
+        "        self.X: NDArray = []\n",
+        "        self.y: list[ArrayLike] = []\n",
+        "        self.weights_history: list[NDArray] = [] # array of weight matrix. index is current epoch\n",
+        "        self.biases_history: list[ArrayLike] = [] # array of bias list. index is current epoch\n",
         "\n",
         "        self.activation_func = activation_func\n",
         "        self.learning_rate = learning_rate\n",
         "        self.verbose = verbose\n",
-        "        self.epoch_amount = epoch_amount\n",
+        "        self.epoch_amount = max_epoch\n",
         "        self.batch_size = batch_size\n",
         "        self.loss_func = loss_func\n",
         "\n",
         "    # return [ matrix, matrix, matrix ... ] where matrix is the weight adjacency matrix for each layer. length should be number of layers - 1 because its like the edges/connection between the nodes\n",
         "    def _generate_initial_weights(self):\n",
-        "        pass\n",
+        "        \n",
+        "        # delete this\n",
+        "        # weights, nodes, nodes_active, biases = self._generate_new_empty_layers()\n",
+        "        # return weights\n",
+        "        return [np.array([[0.15, 0.25], [0.2, 0.3]]), np.array([[0.4, 0.5], [0.45, 0.55]])]\n",
         "    \n",
         "    # return [ float, float, float ... ] where float is the bias for each layer. length should be number of layers - 1 because input layer does not have bias\n",
         "    def _generate_initial_biases(self):\n",
-        "        pass\n",
+        "        \n",
+        "        # delete this\n",
+        "        # weights, nodes, nodes_active, biases = self._generate_new_empty_layers()\n",
+        "        # return biases\n",
+        "        return [np.array([0.35, 0.35]), np.array([0.6, 0.6])]\n",
+        "        \n",
         "\n",
         "# region functions\n",
         "    def _activation_function(self, x: Union[float, NDArray], func: str):\n",
@@ -469,10 +464,11 @@
         "    \n",
         "\n",
         "    def _loss_function(self, y_act, y_pred, number_of_classes, func: str):\n",
-        "        if func == 'mean_squared_error': return self.mean_squared_error(y_act, y_pred)\n",
-        "        elif func == 'binary_cross_entropy': return self.binary_cross_entropy(y_act, y_pred)\n",
-        "        elif func == 'categorical_cross_entropy': return self.categorical_cross_entropy(y_act, y_pred, number_of_classes)\n",
+        "        if func == 'mean_squared_error': return FFNNClassifier.mean_squared_error(y_act, y_pred)\n",
+        "        elif func == 'binary_cross_entropy': return FFNNClassifier.binary_cross_entropy(y_act, y_pred)\n",
+        "        elif func == 'categorical_cross_entropy': return FFNNClassifier.categorical_cross_entropy(y_act, y_pred, number_of_classes)\n",
         "    def mean_squared_error(y_act, y_pred):\n",
+        "        return 2/len(y_act) * (y_act - y_pred)\n",
         "        res = 0\n",
         "        n = len(y_act)\n",
         "        for i in range(n):\n",
@@ -509,9 +505,9 @@
         "        \n",
         "        len_features = len(self.X[0])\n",
         "        len_classes = self._get_number_of_classes()\n",
-        "        layer_sizes = np.zeros(len(self.hidden_layer_sizes)+2)\n",
+        "        layer_sizes = np.zeros(len(self.hidden_layer_sizes)+2, dtype=int)\n",
         "        layer_sizes[0] = len_features\n",
-        "        for i in range(1, len(self.hidden_layer_sizes)):\n",
+        "        for i in range(1, len(self.hidden_layer_sizes)+1):\n",
         "            layer_sizes[i] = self.hidden_layer_sizes[i-1]\n",
         "        layer_sizes[len(layer_sizes)-1] = len_classes\n",
         "        \n",
@@ -532,13 +528,13 @@
         "        biases = []\n",
         "        nodes = []\n",
         "        nodes_active = []\n",
-        "        for i in range(network_depth-2):\n",
-        "            weights.append(np.zeros(layer_sizes[i], layer_sizes[i+1]))\n",
-        "            biases.append(np.zeros(layer_sizes[i+1]))\n",
         "        for i in range(network_depth-1):\n",
+        "            weights.append(np.zeros((layer_sizes[i], layer_sizes[i+1])))\n",
+        "            biases.append(np.zeros(layer_sizes[i+1]))\n",
+        "        for i in range(network_depth):\n",
         "            nodes.append(np.zeros(layer_sizes[i]))\n",
         "            nodes_active.append(np.zeros(layer_sizes[i]))\n",
-        "            \n",
+        "        \n",
         "        return weights, nodes, nodes_active, biases\n",
         "\n",
         "\n",
@@ -549,9 +545,15 @@
         "# endregion getters setters\n",
         "\n",
         "    def fit(self, X: NDArray, y: NDArray):\n",
+        "        # clean up in case this function is called multiple times\n",
+        "        self.X: NDArray = []\n",
+        "        self.y: ArrayLike = []\n",
+        "        self.weights_history: list[NDArray] = []\n",
+        "        self.biases_history: list[ArrayLike] = []\n",
+        "\n",
+        "\n",
         "        self.X = X\n",
         "        self.y = y\n",
-        "        \n",
         "        initial_weight = self._generate_initial_weights()\n",
         "        initial_bias = self._generate_initial_biases()\n",
         "        self.weights_history.append(initial_weight)\n",
@@ -568,9 +570,9 @@
         "                # Feed Forward\n",
         "                nodes[0] = self.X[current_dataset_idx]\n",
         "                nodes_active[0] = self.X[current_dataset_idx] # not passed to activation function for the first layer\n",
-        "                for k in range(1, len(network_depth)):\n",
-        "                    w_k = self.weights_history[-1][k] # [-1]: current weight, [k]: current layer\n",
-        "                    b_k = self.biases_history[-1][k]\n",
+        "                for k in range(1, network_depth):\n",
+        "                    w_k = self.weights_history[-1][k-1].T # [-1]: current weight, [k-1]: current layer\n",
+        "                    b_k = self.biases_history[-1][k-1]\n",
         "                    h_k_min_1 = nodes_active[k-1]\n",
         "\n",
         "                    a_k = b_k + np.dot(w_k, h_k_min_1)\n",
@@ -578,27 +580,31 @@
         "                    nodes_active[k] = self._activation_function(a_k, self.activation_func)\n",
         "\n",
         "                loss_grad = self._loss_function(\n",
-        "                    y_act=self.y[current_dataset_idx], \n",
+        "                    y_act=self.y, \n",
         "                    y_pred=nodes_active[network_depth-1], \n",
         "                    number_of_classes=number_of_classes, \n",
         "                    func=self.loss_func\n",
         "                )\n",
         "\n",
+        "\n",
         "                # Backward Propagation\n",
         "                delta = loss_grad * self._activation_derived_function(nodes[-1], self.activation_func)\n",
         "                weight_gradiens = np.zeros_like(self.weights_history[-1])\n",
         "                bias_gradiens = np.zeros_like(self.biases_history[-1])\n",
+        "\n",
+        "                weight_gradiens[network_depth-2] = np.outer(nodes_active[-2].T, delta) # cant use dot because its 1D array and numpy cant seem to transpose it\n",
+        "                bias_gradiens[network_depth-2] = delta\n",
         "                \n",
-        "                for k in range(network_depth-1, 0, -1): # from the last hidden layer (not including the output layer)\n",
-        "                    weights = self.weights_history[-1][k]\n",
-        "                    delta = np.dot(delta, weights.T) * self._activation_derived_function(nodes[k-1], self.activation_func)\n",
-        "                    weight_gradiens[k] = np.dot(nodes_active[k-1].T, delta)\n",
-        "                    bias_gradiens[k] = np.sum(delta, axis=0, keepdims=True)\n",
+        "                for k in range(network_depth-2, 0, -1): # from the last hidden layer (not including the output layer)\n",
+        "                    w = self.weights_history[-1][k]\n",
+        "                    delta = np.dot(delta, w.T) * self._activation_derived_function(nodes[k], self.activation_func)\n",
+        "                    weight_gradiens[network_depth-2-k] = np.outer(nodes_active[k-1].T, delta)\n",
+        "                    bias_gradiens[network_depth-2-k] = delta\n",
         "                \n",
         "                # Update\n",
-        "                for k in range(len(self.weights_history)):\n",
+        "                for k in range(network_depth-1):\n",
         "                    w_k = self.weights_history[-1][k]\n",
-        "                    weights[k] = w_k - self.learning_rate * weight_gradiens[k]\n",
+        "                    weights[k] = w_k + self.learning_rate * weight_gradiens[k]\n",
         "                    biases[k] = w_k - self.learning_rate * bias_gradiens[k]\n",
         "                self.weights_history.append(weights)\n",
         "                self.biases_history.append(biases)\n",
@@ -642,19 +648,64 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Final Weights: [array([[0.14978072, 0.24975114],\n",
+            "       [0.19956143, 0.29950229]]), array([[0.35891648, 0.51130127],\n",
+            "       [0.40866619, 0.56137012]])]\n"
+          ]
+        }
+      ],
       "source": [
-        "ffnnn = FFNNClassifier(\n",
+        "\n",
+        "ffnn = FFNNClassifier(\n",
+        "    hidden_layer_sizes=[2],\n",
+        "    activation_func=\"sigmoid\",\n",
+        "    learning_rate=0.5,\n",
+        "    verbose=1,\n",
+        "    max_epoch=1,\n",
+        "    batch_size=10,\n",
+        "    loss_func=\"mean_squared_error\"\n",
+        ")\n",
+        "\n",
+        "X_temp = np.array([[0.05, 0.1]])\n",
+        "y_temp = np.array([0.01, 0.99])\n",
+        "ffnn.fit(X_temp, y_temp)\n",
+        "prediction = ffnn.predict(X_temp)\n",
+        "# print(prediction)\n",
+        "\n",
+        "print(\"Final Weights:\", ffnn.weights_history[-1])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "keyword argument repeated: max_epoch (1638591606.py, line 7)",
+          "output_type": "error",
+          "traceback": [
+            "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[244]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmax_epoch=5,\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m keyword argument repeated: max_epoch\n"
+          ]
+        }
+      ],
+      "source": [
+        "ffnn = FFNNClassifier(\n",
         "    hidden_layer_sizes=(64, 64),\n",
         "    activation_func=\"relu\",\n",
-        "    learning_rate=0.1,\n",
-        "    max_iter=20,\n",
+        "    learning_rate=0.5,\n",
+        "    max_epoch=20,\n",
         "    verbose=0,\n",
-        "    epoch_amount=5,\n",
+        "    max_epoch=5,\n",
         "    batch_size=10\n",
         ")\n",
-        "ffnnn.fit(X_train, y_train)\n",
-        "prediction = ffnnn.predict(X_test)\n",
+        "ffnn.fit(X_train, y_train)\n",
+        "prediction = ffnn.predict(X_test)\n",
         "visualize(X_test, prediction, 10, 10)\n"
       ]
     }
