feat: handle batch input

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -492,20 +492,26 @@
         "        number_of_classes = self._get_number_of_classes()\n",
         "\n",
         "        for epoch in range(self.epoch_amount):\n",
-        "            for current_dataset_idx in range(len(self.X)):\n",
+        "            # for current_dataset_idx in range(len(self.X)):\n",
+        "            current_dataset_idx = 0\n",
+        "            while current_dataset_idx < len(self.X):\n",
         "                weights, nodes, nodes_active, biases = self._generate_new_empty_layers() # will be filled with weights based on the previous epoch. Will be appended to the history after the end of the epoch\n",
         "\n",
         "                # Feed Forward\n",
-        "                nodes[0] = self.X[current_dataset_idx]\n",
-        "                nodes_active[0] = self.X[current_dataset_idx] # not passed to activation function for the first layer\n",
+        "                until_idx = min(current_dataset_idx+self.batch_size, len(self.X))\n",
+        "                nodes[0] = self.X[current_dataset_idx:until_idx]\n",
+        "                nodes_active[0] = self.X[current_dataset_idx:until_idx] # not passed to activation function for the first layer\n",
+        "                \n",
         "                for k in range(1, network_depth):\n",
-        "                    w_k = self.weights_history[-1][k-1].T # [-1]: current weight, [k-1]: current layer\n",
+        "                    w_k = self.weights_history[-1][k-1].T\n",
         "                    b_k = self.biases_history[-1][k-1]\n",
         "                    h_k_min_1 = nodes_active[k-1]\n",
         "\n",
-        "                    a_k = b_k + np.dot(w_k, h_k_min_1)\n",
-        "                    nodes[k] = a_k\n",
-        "                    nodes_active[k] = self._activation_function(a_k, self.activation_func)\n",
+        "                    b_k_broadcasted = b_k[:, np.newaxis] # copy the bias for each row in the matrix\n",
+        "\n",
+        "                    a_k = b_k_broadcasted + np.dot(w_k, h_k_min_1.T)\n",
+        "                    nodes[k] = a_k.T\n",
+        "                    nodes_active[k] = self._activation_function(a_k, self.activation_func).T\n",
         "\n",
         "                loss_grad = self._loss_function(\n",
         "                    y_act=self.y, \n",
@@ -520,7 +526,7 @@
         "                weight_gradiens = np.zeros_like(self.weights_history[-1])\n",
         "                bias_gradiens = np.zeros_like(self.biases_history[-1])\n",
         "\n",
-        "                weight_gradiens[network_depth-2] = np.outer(nodes_active[-2].T, delta) # cant use dot because its 1D array and numpy cant seem to transpose it\n",
+        "                weight_gradiens[network_depth-2] = np.dot(nodes_active[-2].T, delta) # cant use dot because its 1D array and numpy cant seem to transpose it\n",
         "                bias_gradiens[network_depth-2] = delta\n",
         "                \n",
         "                for k in range(network_depth-2, 0, -1): # from the last hidden layer (not including the output layer)\n",
@@ -538,6 +544,11 @@
         "                    biases[k] = w_k - self.learning_rate * bias_gradiens[k]\n",
         "                self.weights_history.append(weights)\n",
         "                self.biases_history.append(biases)\n",
+        "\n",
+        "            \n",
+        "                current_dataset_idx += self.batch_size\n",
+        "            #### while loop ends here ##############################################\n",
+        "\n",
         "\n",
         "            if self.verbose == 1:\n",
         "                print(f\"Epoch {epoch+1}/{self.epoch_amount} done\")\n",
@@ -576,9 +587,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "nodes_active[0].shape: (1, 2)\n",
+            "nodes_active[0]: [[0.05 0.1 ]]\n",
+            "nodes_active[-1] [[0.75136507 0.77292847]]\n",
+            "nodes[-1] [[1.10590597 1.2249214 ]]\n",
+            "nodes[-1].T [[1.10590597]\n",
+            " [1.2249214 ]]\n",
+            "delta [[-0.13849856  0.03809824]]\n",
+            "network_depth-2: 1\n",
+            "bias_gradiens.shape: (2, 2)\n",
+            "bias_gradiens[0].shape: (2,)\n",
+            "bias_gradiens[1].shape: (2,)\n",
+            "bias_gradiens[network_depth-2].shape: (2,)\n",
+            "bias_gradiens[network_depth-2]: [0. 0.]\n",
+            "Epoch 1/1 done\n",
+            "Final Weights: [array([[0.14978072, 0.24975114],\n",
+            "       [0.19956143, 0.29950229]]), array([[0.35891648, 0.51130127],\n",
+            "       [0.40866619, 0.56137012]])]\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "ffnn = FFNNClassifier(\n",
@@ -587,7 +622,7 @@
         "    learning_rate=0.5,\n",
         "    verbose=1,\n",
         "    max_epoch=1,\n",
-        "    batch_size=10,\n",
+        "    batch_size=1,\n",
         "    loss_func=\"mean_squared_error\"\n",
         ")\n",
         "\n",
@@ -836,7 +871,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
